tests/custom-4.3.1/compliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-4.3.1-compliant
policies:
  - ../../../kyverno-policies/custom-4.3.1.yaml
resources:
  - namespace.yaml
results:
  - policy: custom-4-3-1-cni-supports-network-policies
    rule: check-cni-supports-network-policies
    resources:
      - compliant-ns
    kind: Namespace
    result: pass
